--- a/404.html
+++ b/404.html
@@ -9,13 +9,13 @@
 <meta name="keywords" content="">
 <meta name="description" content="">
 <meta name="author" content="">
-<link rel="canonical" href="/404.html">
+<link rel="canonical" href="https://shahnewaz-labib.github.io/404.html">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.3613efbd0b1772781e8f49935e973cae632a7f61471c05b17be155505ccf87b5.css" integrity="sha256-NhPvvQsXcngej0mTXpc8rmMqf2FHHAWxe&#43;FVUFzPh7U=" rel="preload stylesheet" as="style">
-<link rel="icon" href="favicon.ico">
-<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-<link rel="apple-touch-icon" href="apple-touch-icon.png">
-<link rel="mask-icon" href="safari-pinned-tab.svg">
+<link rel="icon" href="https://shahnewaz-labib.github.io/favicon.ico">
+<link rel="icon" type="image/png" sizes="16x16" href="https://shahnewaz-labib.github.io/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="https://shahnewaz-labib.github.io/favicon-32x32.png">
+<link rel="apple-touch-icon" href="https://shahnewaz-labib.github.io/apple-touch-icon.png">
+<link rel="mask-icon" href="https://shahnewaz-labib.github.io/safari-pinned-tab.svg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
 <noscript>
@@ -57,7 +57,7 @@
 </noscript><meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="/404.html" />
+<meta property="og:url" content="https://shahnewaz-labib.github.io/404.html" />
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="404 Page not found"/>
@@ -80,7 +80,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="" accesskey="h" title="yab (Alt + H)">yab</a>
+            <a href="https://shahnewaz-labib.github.io/" accesskey="h" title="yab (Alt + H)">yab</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
@@ -106,17 +106,17 @@
         </div>
         <ul id="menu">
             <li>
-                <a href="/archives/" title="Archives">
+                <a href="https://shahnewaz-labib.github.io/archives/" title="Archives">
                     <span>Archives</span>
                 </a>
             </li>
             <li>
-                <a href="/categories/" title="Categories">
+                <a href="https://shahnewaz-labib.github.io/categories/" title="Categories">
                     <span>Categories</span>
                 </a>
             </li>
             <li>
-                <a href="/tags/" title="Tags">
+                <a href="https://shahnewaz-labib.github.io/tags/" title="Tags">
                     <span>Tags</span>
                 </a>
             </li>
@@ -128,7 +128,7 @@
     </main>
     
 <footer class="footer">
-    <span>&copy; 2023 <a href="">yab</a></span>
+    <span>&copy; 2023 <a href="https://shahnewaz-labib.github.io/">yab</a></span>
     <span>
         Powered by
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
