--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="robots" content="index, follow">
-<title>yab</title>
+<title>Yet Another Blog</title>
 
 <meta name="description" content="">
 <meta name="author" content="">
@@ -56,20 +56,20 @@
         }
 
     </style>
-</noscript><meta property="og:title" content="yab" />
+</noscript><meta property="og:title" content="Yet Another Blog" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://shahnewaz-labib.github.io/" />
 
 <meta name="twitter:card" content="summary"/>
-<meta name="twitter:title" content="yab"/>
+<meta name="twitter:title" content="Yet Another Blog"/>
 <meta name="twitter:description" content=""/>
 
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Organization",
-  "name": "yab",
+  "name": "Yet Another Blog",
   "url": "https://shahnewaz-labib.github.io/",
   "description": "",
   "thumbnailUrl": "https://shahnewaz-labib.github.io/favicon.ico",
@@ -95,7 +95,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="https://shahnewaz-labib.github.io/" accesskey="h" title="yab (Alt + H)">yab</a>
+            <a href="https://shahnewaz-labib.github.io/" accesskey="h" title="Yet Another Blog (Alt + H)">Yet Another Blog</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
@@ -170,7 +170,7 @@ ip addr show INTERFACE_NAME | grep inet | awk &#39;{ print $2; }&#39; | sed &#39
     </main>
     
 <footer class="footer">
-    <span>&copy; 2023 <a href="https://shahnewaz-labib.github.io/">yab</a></span>
+    <span>&copy; 2023 <a href="https://shahnewaz-labib.github.io/">Yet Another Blog</a></span>
     <span>
         Powered by
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
